# AS91897-Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run
Assets/data/: achievements.json  questions.json
Components/: AchievementListItem.py  Button.py  Checkbox.py  ListItem.py  Player.py  QuestionBlock.py  Textfield.py  VerticalGradient.py
Scenes/: AchievementsScene.py  GameScene.py  HomeScene.py  IntroScene.py  SettingsScene.py
Utils/: PlayerDataContext.py  SceneManager.py  fetchGitCommitCount.py  fetchGitCommitID.py  fetchRandomQuestion.py  loggerConfig.py  playerDataManagement.py
